--- a/22 - Recreating Codepen/style-START.css
+++ b/22 - Recreating Codepen/style-START.css
@@ -1,3 +1,10 @@
+:root {
+  --grey: #343436;
+  --yellow: #ffc600;
+  --code-header: #18272f;
+  --code-editor: #1b2b34;
+}
+
 html {
   box-sizing: border-box;
   font-family: "Lato", "Lucida Grande", "Lucida Sans Unicode", Tahoma,
@@ -28,3 +35,85 @@ h6 {
   font-size: 1.5em;
 }
 
+/* container */
+.codepen {
+  display: grid;
+  /* header/pen, code, iframe, settings */
+  grid-template-rows: auto 1fr 1fr auto;
+  color: white;
+  height: 100vh;
+}
+
+/* Header */
+.pen {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-flow: column;
+  align-items: center;
+  grid-gap: 10px;
+
+  padding: 10px;
+  background: black;
+  border-bottom: 5px solid var(--grey, grey);
+}
+
+/* Buttons */
+.button {
+  background: var(--grey, grey);
+  color: white;
+  border: 0;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 15px;
+}
+
+.button--small {
+  font-size: 12px;
+  padding: 5px;
+}
+
+/* Code */
+.code {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.editor {
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+
+.editor__header {
+  background: var(--code-header);
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  padding: 10px;
+}
+
+.editor__code {
+  background: var(--code-editor);
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+
+.editor__number {
+  display: block;
+}
+
+.editor__input {
+  resize: none;
+  background: var(--code-editor);
+  border: 0;
+  color: #808080;
+}
+
+/* iframe */
+.preview {
+  display: grid;
+}
+
+/* footer */
+.settings {
+  border-top: 3px solid var(--grey);
+  background: black;
+}
