--- a/24 - Responisve Website/responsive-START.css
+++ b/24 - Responisve Website/responsive-START.css
@@ -1,3 +1,6 @@
+:root {
+  --yellow: #ffc600;
+}
 body {
   font-size: 15px;
 }
@@ -12,3 +15,187 @@ img {
   max-width: 100%;
 }
 
+.wrapper {
+  display: grid;
+  grid-gap: 20px;
+}
+
+.top {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.hero {
+  padding: 50px;
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 2;
+  background-image: url(images/taco.jpg);
+  background-position: right bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 400px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.hero > * {
+  background: var(--yellow);
+  padding: 5px;
+}
+
+/* call to action */
+.cta {
+  background: var(--yellow);
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  align-content: center;
+}
+
+.price {
+  font-size: 60px;
+  font-weight: 300;
+}
+
+.cta p {
+  margin: 0;
+}
+
+.menu {
+  padding: 0;
+  margin: 0;
+}
+
+#menu-list {
+  display: grid;
+  grid-gap: 10px;
+  /* firefox: padding is purple! */
+  padding: 0;
+  list-style: none;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+
+#menu-list a {
+  background: var(--yellow);
+  display: block;
+  text-transform: uppercase;
+  padding: 10px;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  font-size: 20px;
+}
+
+.features {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 20px;
+}
+
+.feature {
+  background: white;
+  text-align: center;
+}
+.icon {
+  font-size: 60px;
+}
+
+.feature p {
+  font-weight: 300;
+}
+
+.about {
+  display: grid;
+  background: white;
+  padding: 40px;
+  grid-template-columns: 400px 1fr;
+  align-items: center;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 10px;
+}
+
+.gallery h2 {
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  grid-gap: 20px;
+}
+.gallery h2::before,
+.gallery h2::after {
+  display: block;
+  content: '';
+  height: 10px;
+  background: linear-gradient(to left, var(--yellow), transparent);
+}
+
+.gallery h2::after {
+  background: linear-gradient(to right, var(--yellow), transparent);
+}
+
+@media (max-width: 1000px) {
+  .menu {
+    order: -1;
+    /* ???? */
+    perspective: 800;
+  }
+  [aria-controls="menu-list"] {
+
+  }
+
+  .menu ul {
+    max-height: 0;
+    overflow: hidden;
+    transform: rotateX(90deg);
+    transition: all 0.5s;
+  }
+
+  [aria-expanded="true"] ~ ul {
+    max-height: 200px;
+    transform: rotateX(0deg);
+  }
+
+  [aria-expanded="false"] .open {
+    /* display: inline; */
+  }
+  [aria-expanded="false"] .close {
+    display: none;
+  }
+  [aria-expanded="true"] .close {
+    /* display: none; */
+  }
+  [aria-expanded="true"] .open {
+    display: none;
+    
+  }
+}
+
+@media (max-width: 700px) {
+  .top {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .about {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 500px) {
+  .top {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .cta {
+    grid-column: 1 / -1;
+  }
+}
